@@ -19,6 +19,7 @@
  */
 package org.openremote.manager.agent;
 
+import groovy.util.MapEntry;
 import org.apache.camel.builder.RouteBuilder;
 import org.openremote.agent.protocol.ProtocolAssetService;
 import org.openremote.container.message.MessageBrokerService;
@@ -394,8 +395,10 @@ public class AgentService extends RouteBuilder implements ContainerService, Asse
 
     protected void startAgent(Agent<?,?,?> agent) {
         withLock(getClass().getSimpleName() + "::startAgent", () -> {
+            Protocol<?> protocol = null;
+
             try {
-                Protocol<?> protocol = agent.getProtocolInstance();
+                protocol = agent.getProtocolInstance();
                 protocolInstanceMap.put(agent.getId(), protocol);
 
                 LOG.fine("Starting protocol instance: " + protocol);
@@ -428,6 +431,12 @@ public class AgentService extends RouteBuilder implements ContainerService, Asse
 
 
             } catch (Exception e) {
+                if (protocol != null) {
+                    try {
+                        protocol.stop(container);
+                    } catch (Exception ignored) {
+                    }
+                }
                 protocolInstanceMap.remove(agent.getId());
                 LOG.log(Level.SEVERE, "Failed to start protocol instance for agent: " + agent, e);
                 sendAttributeEvent(new AttributeEvent(agent.getId(), Agent.STATUS.getName(), ConnectionStatus.ERROR));
@@ -592,7 +601,7 @@ public class AgentService extends RouteBuilder implements ContainerService, Asse
             .filter(agentAttribute -> agentAttribute.key != null)
             .collect(Collectors.groupingBy(
                 agentAttribute -> agentAttribute.key,
-                mapping(agentAttribute -> agentAttribute.value, toList())
+                    Collectors.collectingAndThen(Collectors.toList(), agentAttribute -> agentAttribute.stream().map(item->item.value).collect(toList())) //TODO had to change to this because compiler has issues with inferring types, need to check for a better solution
             ));
     }
 
@@ -707,7 +716,7 @@ public class AgentService extends RouteBuilder implements ContainerService, Asse
             }
 
             try {
-                ProtocolInstanceDiscovery instanceDiscovery = instanceDiscoveryProviderClass.newInstance();
+                ProtocolInstanceDiscovery instanceDiscovery = instanceDiscoveryProviderClass.getDeclaredConstructor().newInstance();
                 Future<Void> discoveryFuture = instanceDiscovery.startInstanceDiscovery(onDiscovered);
                 discoveryFuture.get();
             } catch (InterruptedException e) {
